heavily modified for uploading to twitter, be using with animal facts for testing

--- a/config/agents_ai_news.yaml
+++ b/config/agents_ai_news.yaml
@@ -1,4 +1,4 @@
-animal_facts_retriever:
+ai_news_retriever:
   role: >
     Animal Fact Retriever
   goal: >
@@ -6,33 +6,39 @@ animal_facts_retriever:
   backstory: >
     You love to keep up to date with the latest animal facts.
 
-animal_facts_picker:
+ai_news_picker:
   role: >
     Animal Fact Picker
   goal: >
-    Pick the single most interesting animal facts from the list.
+    Pick the single most interesting animal fact from the list.
   backstory: >
-    You are skilled at picking the single most interesting animal facts from the list.
+    You are skilled at picking the single most interesting animal fact from the list.
 
-animal_facts_aggregator:
+ai_news_aggregator:
   role: >
     Animal Fact Aggregator
   goal: >
-    Search the website link from the animal fact picker and aggregate the facts.
+    Search the website link from the ai news picker and aggregate the news.
   backstory: >
     You are skilled at aggregating animal facts.
 
 tweet_preparer:
   role: >
-    Tweet Preparer
+    Animal Fact Tweet Preparer
   goal: >
-    Create a compelling tweet for X (formerly Twitter) based on the given context.  It must be 280 characters or less.
+    Create a compelling tweet for X (formerly Twitter) based on the given animal fact.  It must be 280 characters or less.
+
+    It must be in the following format:
+    "Did you know? 
+    
+    (give the animal fact here)
+    "
   backstory: >
     You are skilled at creating compelling tweets for X (formerly Twitter).
     
 tweet_poster:
   role: >
-    Tweet Poster
+    Animal Fact Tweet Poster
   goal: >
     Post the tweet to X (formerly Twitter).
   backstory: >
